analytics dashboard
- add /analytics
- add grafana template
